<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Open Vehicle</string>
    <string name="Loading">Please wait</string>
    <string name="Settings">Settings</string>
    <string name="Range" formatted="false">Range: %s (%s estimated)</string>
    <string name="LastUpdated" formatted="false">Updated: %1$tD %1$tT</string>
    <string name="SOC">%s%%</string>
    <string name="AddCar">+</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="Save">Save</string>
    <string name="DatabaseError">Database error</string>
    <string name="PinShortcut">Pin</string>
    <string name="PinRequestSuccess">Pin requested, check launcher</string>
    <string name="PinRequestFailure">Pin request failed</string>
    <string name="Send">Send</string>
    <string name="Error">Error</string>
    <string name="Set">Set</string>
    <string name="Control">Control</string>
    <string name="ServerNameOrIP">Server Address (Domain or IP)</string>
    <string name="GcmSenderID">GCM Sender ID (empty=default)</string>
    <string name="NetPass">Server Password</string>
    <string name="UserPass">User Password (Paranoid Mode)</string>
    <string name="Quit">Exit Application</string>
    <string name="Edit">Edit</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ClearNotifications">Clear Notifications</string>
    <string name="VehicleImage">Vehicle Image</string>
    <string name="btnAddCar">Add Car</string>
    <string name="btnCenterMap">Center Map</string>
    <string name="ImageParking">Vehicle Parking</string>
    <string name="SysWarning">System Warning</string>
    <string name="LockIdle">Vehicle Lock</string>
    <string name="SignalStrength">Signal Strength</string>
    <string name="ChargerPlug">Charger Plug</string>
    <string name="DefaultCharging">00A/000V</string>
    <string name="DefaultChargingPower">000.0kW</string>
    <string name="DefaultChargingPowerLoss">➘ 0.0kW</string>
    <string name="DefaultSlidetoCharge">SLIDE TO\nCHARGE</string>
    <string name="DefaultMode">STANDARD</string>
    <string name="ChargingOverlay">Charging</string>
    <string name="BatteryOverlay">Battery</string>
    <string name="EstimatedShort">ESTIMATED RANGE</string>
    <string name="IdealShort">IDEAL RANGE</string>
    <string name="BatteryText">Battery</string>
    <string name="Homelink">Homelink</string>
    <string name="Profile">Profile</string>
    <string name="Default">Default</string>
    <string name="Wakeup">Wakeup</string>
    <string name="Add">Add</string>
    <string name="Battery">Battery</string>
    <string name="Car">Car</string>
    <string name="Hardware">Hardware</string>
    <string name="Location">Location</string>
    <string name="Messages">Messages</string>
    <string name="Amps">Amps</string>
    <string name="Close">Close</string>
    <string name="Features">Features</string>
    <string name="Parameters">Parameters</string>
    <string name="CellularStats">Cellular usage stats</string>
    <string name="Vehicle">Vehicle</string>
    <string name="WIN">VIN</string>
    <string name="Type">Type</string>
    <string name="GMC">GSM</string>
    <string name="CAC">CAC</string>
    <string name="SOH">SOH</string>
    <string name="Info12V">12V</string>
    <string name="Charged">Charged</string>
    <string name="Service">Service</string>
    <string name="Server">Server</string>
    <string name="App">App</string>
    <string name="Options">Options</string>
    <string name="lb_wakeup_car">Wakeup Car</string>
    <string name="lb_lock_car">Lock Car</string>
    <string name="lb_unlock_car">Unlock Car</string>
    <string name="lb_valet_mode">Valet Mode</string>
    <string name="lb_valet_mode_on">Valet On</string>
    <string name="lb_valet_mode_off">Valet Off</string>
    <string name="lb_valet_mode_smart">Ignition Mode</string>
    <string name="lb_valet_mode_smart_on">Ignition On</string>
    <string name="lb_valet_mode_smart_off">Ignition Off</string>
    <string name="lb_lock_mode_twizy">Limit max speed (kph):</string>
    <string name="lb_lock_car_twizy">Set speed limit</string>
    <string name="lb_unlock_car_twizy">Clear speed limit</string>
    <string name="lb_valet_mode_twizy">Limit trip length (km):</string>
    <string name="lb_valet_mode_on_twizy">Set trip limit</string>
    <string name="lb_valet_mode_off_twizy">Clear trip limit</string>
    <string name="lb_valet_mode_extend_twizy">Allow +1km</string>
    <string name="lb_unvalet_unlock_twizy">Clear trip+speed limit</string>
    <string name="lb_enter_pin">Enter PIN</string>
    <string name="lb_enter_passwd">Enter password</string>
    <string name="lb_enter_value">Enter value</string>
    <string name="lb_wrning_charger">WARNING\nIncorrect charger settings may damage electric systems!</string>
    <string name="lb_charge_current">Charge current (A)</string>
    <string name="lb_charger_setting">Charger Setting</string>
    <string name="lb_charger_confirm_start">Really start charging?</string>
    <string name="lb_charger_confirm_stop">Really stop charging?</string>
    <string name="lb_communications_problem">Communications Problem</string>
    <string name="lb_vehicle_id">Vehicle ID</string>
    <string name="lb_vehicle_label">Vehicle Label (arbitrary)</string>
    <string name="lb_server_passwd">Vehicle Server Password</string>
    <string name="lb_module_passwd">Module/SMS Password</string>
    <string name="lb_slide_choice_vehicle">Slide for vehicle choice</string>
    <string name="lb_mmi_ussd_code">MMI/USSD Code</string>
    <string name="lb_cellular_usage">Cellular Usage</string>
    <string name="lb_reset_ovms_module">Restart OVMS Module</string>
    <string name="lb_center_map">Center map</string>
    <string name="lb_select_server">Select server:</string>
    <string-array name="select_server_options">
        <item translatable="false">api.openvehicles.com</item>
        <item translatable="false">ovms.dexters-web.de</item>
        <item>Custom server</item>
    </string-array>
    <string-array name="select_server_gcm_senders">
        <item translatable="false">497749188588</item>
        <item translatable="false">1043773844049</item>
        <item translatable="false"></item>
    </string-array>
    <string name="lb_ft_digital_speedo">#%d: Digital Speedo</string>
    <string name="lb_ft_gps_stream">#%d: GPS Stream</string>
    <string name="lb_ft_minimum_soc">#%d: Minimum SOC</string>
    <string name="lb_ft_car_bits">#%d: Car Bits</string>
    <string name="lb_ft_can_write">#%d: CAN Write</string>
    <string name="lb_ft_modelyear">#%d: Model year</string>
    <string name="lb_ft_remote_ac_temp">#%d: Remote AC temperature</string>
    <string name="lb_ft_remote_ac_on_bat">#%d: Remote AC on battery</string>
    <string name="lb_ft_stop_suffsoc">#%d: Stop charge on sufficient SOC</string>
    <string name="lb_ft_rt_gpslogint">#%d: GPS log interval [s]</string>
    <string name="lb_ft_rt_kickdown_threshold">#%d: Kickdown threshold</string>
    <string name="lb_ft_rt_kickdown_compzero">#%d: Kickdown compensation</string>
    <string name="lb_ft_rt_chargemode">#%d: Charge stop mode</string>
    <string name="lb_ft_rt_chargepower">#%d: Charge power level</string>
    <string name="lb_ft_rt_suffsoc">#%d: Sufficient SOC</string>
    <string name="lb_ft_rt_suffrange">#%d: Sufficient range</string>
    <string name="lb_ft_rt_maxrange">#%d: Max ideal range</string>
    <string name="lb_ft_rt_capacity">#%d: Battery measured capacity (CAP%%)</string>
    <string name="lb_ft_rt_capacity_nom_ah">#%d: Battery nominal capacity (Ah)</string>
    <string name="lb_cp_registered_telephone">#%d: Registered Telephone</string>
    <string name="lb_cp_module_password">#%d: Module Password</string>
    <string name="lb_cp_miles_km">#%d: Miles/Km</string>
    <string name="lb_cp_notifications">#%d: Notifications</string>
    <string name="lb_cp_ovms_server_ip">#%d: OVMS Server IP</string>
    <string name="lb_cp_cellular_network_apn">#%d: Cellular Network APN</string>
    <string name="lb_cp_cellular_network_user">#%d: Cellular Network User</string>
    <string name="lb_cp_cellular_network_password">#%d: Cellular Network Password</string>
    <string name="lb_cp_vehicle_id">#%d: Vehicle ID</string>
    <string name="lb_cp_server_password">#%d: Server Password</string>
    <string name="lb_cp_paranoid_mode">#%d: Paranoid Mode</string>
    <string name="lb_ovms_firmware">OVMS Version:</string>
    <string name="lb_charger_setting_twizy_hint">Hint: set to zero to deactivate the limit.</string>
    <string name="lb_sufficient_soc">Sufficient SOC (%)</string>
    <string name="lb_sufficient_range">Sufficient range (%s)</string>
    <string name="lb_charge_power_limit">Charge power limit</string>
    <string name="mi_car_details_temp">Fahrenheit</string>
    <string name="notifications_menu">Options</string>
    <string name="notifications_chk_filter_list">Car filter list</string>
    <string name="notifications_chk_filter_info">Car filter info notify</string>
    <string name="notifications_chk_filter_alert">Car filter alert notify</string>
    <string name="notifications_chk_monospace">Monospace</string>
    <string name="notifications_set_fontsize">Font size</string>
    <string name="notifications_btn_help">Info</string>
    <string name="battery_menu">Options</string>
    <string name="battery_btn_get_data">Get data</string>
    <string name="battery_btn_reset_view">Reset zoom</string>
    <string name="battery_btn_help">Info</string>
    <string name="battery_chk_volt">Show Volt</string>
    <string name="battery_chk_temp">Show Temp</string>
    <string name="power_title">Power history</string>
    <string name="power_menu">Options</string>
    <string name="power_btn_get_data">Get data</string>
    <string name="power_btn_reset_view">Reset zoom</string>
    <string name="power_btn_zoom5">Last 5 %1$s</string>
    <string name="power_btn_zoom10">Last 10 %1$s</string>
    <string name="power_btn_help">Info</string>
    <string name="power_chk_energy">Show energy</string>
    <string name="power_chk_power">Show power</string>
    <string name="lb_options_service">Service:</string>
    <string name="lb_options_service_cb">Enable background connection</string>
    <string name="lb_options_service_info">Allows the server connection to stay alive when the App is not running.</string>
    <string name="lb_options_broadcast">Broadcast:</string>
    <string name="lb_options_broadcast_cb">Enable data broadcasts to other Apps</string>
    <string name="lb_options_broadcast_codes">Enter code letters</string>
    <string name="lb_options_commands">Commands:</string>
    <string name="lb_options_commands_cb">Enable vehicle command service</string>
    <string name="lb_options_broadcast_info" formatted="false"><![CDATA[
        <p>Update broadcasting allows to send car data updates to other Apps like Automagic or Tasker
         for the message codes given.</p>
        <p>The command service allows Apps to issue vehicle commands and receive command results. To
         issue commands, the sending App needs to know the vehicle ID and password or the API key.
         Note: all Apps will receive all command results.</p>
        <p>The API key is your local command authorization allowing commands independent of the currently
         selected vehicle. Renewing the API key will invalidate all installed or pinned command shortcuts.
         Use this to revoke all stored command authorizations in other Apps at once.</p>
        <p>See <a href="https://github.com/openvehicles/Open-Vehicle-Android/wiki">OVMS Android Wiki</a>
         and <a href="https://github.com/openvehicles/Open-Vehicle-Monitoring-System/raw/master/docs/OVMS_Protocol.pdf">OVMS protocol (PDF)</a>
         for message details.</p>
    ]]></string>
</resources>