<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:fillViewport="true"
	android:padding="16dp" >

	<LinearLayout 
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:orientation="vertical">
	
		<EditText android:id="@+id/txt_vehicle_id"
			android:layout_width="150dp" android:layout_height="wrap_content"
			android:hint="@string/lb_vehicle_id"
			android:inputType="textCapCharacters">
	        <requestFocus />
		</EditText>
		
	    <EditText android:id="@+id/txt_vehicle_label"
	        android:layout_width="match_parent" android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:hint="@string/lb_vehicle_label"
	        android:inputType="textCapWords"/>
	    
	    <EditText android:id="@+id/txt_server_passwd"
	        android:layout_width="match_parent" android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:hint="@string/lb_server_passwd"
	        android:inputType="textPassword"/>
	    
	    <EditText android:id="@+id/txt_module_passwd"
	        android:layout_width="match_parent" android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:hint="@string/lb_module_passwd"
	        android:inputType="textPassword"/>

	    <EditText
	        android:id="@+id/txt_server_address"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:ems="10"
	        android:hint="@string/ServerNameOrIP"
	        android:inputType="text"
	        android:text="tmc.openvehicles.com" />
	
	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	    	android:text="@string/lb_slide_choice_vehicle"/>
	    
        <Gallery android:id="@+id/ga_car" 
        	android:layout_width="match_parent" android:layout_height="0dp"
        	android:spacing="20dp"
            android:layout_weight="1"/>
	</LinearLayout>
</ScrollView>