<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<RelativeLayout 
	android:layout_width="match_parent" android:layout_height="wrap_content"
	android:padding="18dp"
    >

	<TextView
		android:id="@+id/txt_vehicle_id"
		style="@style/TextValue"
		android:layout_width="match_parent"
		android:layout_alignParentTop="true"
		android:layout_toRightOf="@+id/ac_01"/>

	<TextView
		android:id="@+id/ac_01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/txt_vehicle_id"
		android:layout_alignBottom="@+id/txt_vehicle_id"
		android:layout_alignParentLeft="true"
		android:minWidth="80dp"
		android:text="@string/Vehicle" />

	<TextView
		android:id="@+id/txt_win"
		style="@style/TextValue"
		android:layout_alignLeft="@+id/txt_vehicle_id"
		android:layout_alignRight="@+id/txt_vehicle_id"
		android:layout_below="@+id/txt_vehicle_id" />

	<TextView
		android:id="@+id/txt_type"
		style="@style/TextValue"
		android:layout_alignLeft="@id/txt_win"
		android:layout_alignRight="@id/txt_win"
		android:layout_below="@id/txt_win" />

	<ImageView
		android:id="@+id/img_signal_rssi"
		android:layout_width="40dp"
		android:layout_height="44dp"
		android:layout_alignLeft="@id/txt_type"
		android:layout_below="@+id/txt_type"
		android:src="@drawable/signal_strength_0" />

	<TextView
		android:id="@+id/txt_gsm"
        style="@style/TextValue"
		android:layout_alignRight="@+id/txt_type"
		android:layout_below="@+id/txt_type"
		android:layout_marginLeft="8dp"
		android:layout_toRightOf="@id/img_signal_rssi" />

	<TextView
		android:id="@+id/txt_cac"
		style="@style/TextValue"
		android:layout_alignLeft="@id/txt_type"
		android:layout_alignRight="@id/txt_gsm"
		android:layout_below="@id/txt_gsm" />

    <TextView
        android:id="@+id/txt_12v_info"
        style="@style/TextValue"
        android:layout_alignLeft="@id/txt_type"
        android:layout_alignRight="@id/txt_gsm"
        android:layout_below="@id/txt_cac" />

    <TextView
    	android:id="@+id/ac_02"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/txt_12v_info"
    	android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
    	android:text="@string/lb_ovms_firmware" />
	
	<TextView
		android:id="@+id/txt_server"
        style="@style/TextValue"
		android:layout_alignRight="@id/txt_gsm"
		android:layout_below="@id/ac_02"
		android:layout_toRightOf="@id/ac_01" />

	<TextView
		android:id="@+id/txt_car"
		style="@style/TextValue"
		android:layout_alignRight="@id/txt_server"
		android:layout_below="@id/txt_server"
		android:layout_toRightOf="@id/ac_01" />

	<TextView
		android:id="@+id/txt_app"
		style="@style/TextValue"
		android:layout_alignRight="@id/txt_car"
		android:layout_below="@id/txt_car"
		android:layout_toRightOf="@id/ac_01"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txt_win"
		android:layout_alignBottom="@id/txt_win"
		android:layout_alignParentLeft="true"
		android:text="@string/WIN" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txt_type"
		android:layout_alignBottom="@id/txt_type"
		android:layout_alignParentLeft="true"
		android:text="@string/Type" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txt_gsm"
		android:layout_alignBottom="@id/txt_gsm"
		android:layout_alignParentLeft="true"
		android:text="@string/GMC" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txt_cac"
		android:layout_alignBottom="@id/txt_cac"
		android:layout_alignParentLeft="true"
		android:text="@string/CAC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_12v_info"
        android:layout_alignBottom="@id/txt_12v_info"
        android:layout_alignParentLeft="true"
        android:text="@string/Info12V" />

    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txt_server"
		android:layout_alignBottom="@id/txt_server"
		android:layout_alignParentLeft="true"
		android:text="@string/Server" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txt_car"
		android:layout_alignBottom="@id/txt_car"
		android:layout_alignParentLeft="true"
		android:text="@string/Car" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/txt_app"
		android:layout_alignBottom="@id/txt_app"
		android:layout_alignParentLeft="true"
		android:text="@string/App" />

</RelativeLayout>
</ScrollView>