<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:ovms="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:textAppearance="@android:style/TextAppearance.Medium"
                  android:gravity="center_horizontal|bottom"
                  android:id="@+id/lb_sufficient_soc"
                  android:text="@string/lb_sufficient_soc"/>

        <com.openvehicles.OVMS.ui.witdet.SlideNumericView
            android:layout_marginBottom="30dp"
            android:id="@+id/snv_sufficient_soc"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            ovms:min="0"
            ovms:max="99"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dip"
            />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp"
                  android:textAppearance="@android:style/TextAppearance.Medium"
                  android:gravity="center_horizontal|bottom"
                  android:id="@+id/lb_sufficient_range"
                  android:text="@string/lb_sufficient_range"/>

        <com.openvehicles.OVMS.ui.witdet.SlideNumericView
            android:layout_marginBottom="30dp"
            android:id="@+id/snv_sufficient_range"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            ovms:min="0"
            ovms:max="100"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dip"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="12dp"
                  android:textAppearance="@android:style/TextAppearance.Small"
                  android:gravity="center_horizontal"
                  android:text="@string/lb_charger_setting_twizy_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center_horizontal|bottom"
            android:id="@+id/textView"
            android:text="@string/lb_charge_power_limit"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spn_charge_power_limit"
            android:entries="@array/charge_power_limits"
            android:background="@drawable/spinner_ab_focused_ovms"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:padding="10dp"/>

    </LinearLayout>

</FrameLayout>

